[tool.poetry]
name = "rl"
version = "0.1.0"
description = ""
authors = ["gshjis <ilya.togan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["classic-control"], version = "^1.3.0"}
numpy = "^2.4.6"
matplotlib = "^3.10.9"
stable-baselines3 = "^2.8.0"
torch = {version = "2.4.1", source = "pytorch-cpu"}
co = {path = "packages/simulation/CO", develop = true}
pygame = "^2.6.1"
scipy = "^1.17.1"
pid = {path = "packages/controllers/PID", develop = true}
gui = {path = "packages/simulation/GUI", develop = true}
numba = "^0.65.1"
ffmpeg = "^1.4"
pybind11 = "^3.0.4"
profiling = {path = "profiling", develop = true}
reinforce = {path = "packages/controllers/REINFORCE", develop = true}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
